test/scc/expr/semantic-errors/123.a
123.t:3:30: error: too many initializer values